[metadata]
name = jctlfmt
url = https://github.com/dmotte/jctlfmt
author = dmotte
license = MIT

description = Python Journalctl parsing and formatting library
long_description =
    [![GitHub main workflow](https://img.shields.io/github/actions/workflow/status/dmotte/jctlfmt/main.yml?branch=main&logo=github&label=main&style=flat-square)](https://github.com/dmotte/jctlfmt/actions)
    [![PyPI](https://img.shields.io/pypi/v/jctlfmt?logo=python&style=flat-square)](https://pypi.org/project/jctlfmt/)

    Python **Journalctl parsing** and **formatting** library.

    Please refer to the [GitHub repository](https://github.com/dmotte/jctlfmt) for more information.
long_description_content_type = text/markdown

keywords = fmt journal parsing log text formatting systemd format logs msg message journald messages filtering journalctl systemd-journald jctl
classifiers =
    Intended Audience :: System Administrators
    Environment :: Console
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Topic :: Utilities

version = 0.0.0

[options]
install_requires =
python_requires = >=3.9.1
packages = jctlfmt
